# zk-rolling-upgrade

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  repowave.toml  requirements.txt
.github/workflows/: python-ci.yml  secret-scan.yml
docs/: architecture.md  interview-notes.md  linting-testing-standards.md  production-readiness.md  runbook.md  security-notes.md
docs/adr/: 0001-core-design.md  0001-main-design-choice.md
tests/: test_plan.py
zk_upgrade/: cli.py  health.py  models.py  orchestrator.py
